--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "electron-debug": "^1.1.0",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.2.1",
-    "leaflet": "^1.0.3"
+    "leaflet": "^1.0.3",
+    "leaflet-knn": "^0.1.0"
   }
 }
